--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,9 @@
 <manifest package = "app.boxresin.runninghealthapp"
           xmlns:android = "http://schemas.android.com/apk/res/android">
 
+	<uses-permission android:name = "android.permission.INTERNET"/>
+	<uses-permission android:name = "android.permission.ACCESS_FINE_LOCATION"/>
+
 	<application
 		android:allowBackup = "true"
 		android:icon = "@mipmap/ic_launcher"
