--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
-<?xml version="1.0" encoding="utf-8"?>
-<manifest package = "app.boxresin.runninghealthapp"
-          xmlns:android = "http://schemas.android.com/apk/res/android">
+<manifest
+	package = "app.boxresin.runninghealthapp"
+	xmlns:android = "http://schemas.android.com/apk/res/android">
 
 	<uses-permission android:name = "android.permission.INTERNET"/>
 	<uses-permission android:name = "android.permission.ACCESS_FINE_LOCATION"/>
@@ -11,13 +11,13 @@
 		android:label = "@string/app_name"
 		android:supportsRtl = "true"
 		android:theme = "@style/AppTheme">
-		<activity android:name = ".MainActivity">
+
+		<activity android:name = ".MainActivity"/>
+		<activity android:name = ".WelcomeActivity">
 			<intent-filter>
 				<action android:name = "android.intent.action.MAIN"/>
-
 				<category android:name = "android.intent.category.LAUNCHER"/>
 			</intent-filter>
 		</activity>
 	</application>
-
 </manifest>
