세팅 액티비티 추가

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,8 +12,13 @@
 		android:supportsRtl = "true"
 		android:theme = "@style/AppTheme">
 
-		<activity android:name = ".MainActivity"/>
+		<activity android:name = ".MainActivity">
+		</activity>
+
 		<activity android:name = ".WelcomeActivity">
+		</activity>
+
+		<activity android:name = ".SettingActivity">
 			<intent-filter>
 				<action android:name = "android.intent.action.MAIN"/>
 				<category android:name = "android.intent.category.LAUNCHER"/>
