--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,13 +16,16 @@
 		</activity>
 
 		<activity android:name = ".WelcomeActivity">
+		</activity>
+
+		<activity
+			android:name = ".SettingActivity"
+			android:label = "설정">
+
 			<intent-filter>
 				<action android:name = "android.intent.action.MAIN"/>
 				<category android:name = "android.intent.category.LAUNCHER"/>
 			</intent-filter>
-		</activity>
-
-		<activity android:name = ".SettingActivity">
 		</activity>
 	</application>
 </manifest>
