설정 프래그먼트를 설정 액티비티로 승격

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,5 +21,10 @@
 
 		<activity android:name = ".WelcomeActivity">
 		</activity>
+
+		<activity
+			android:name = ".SettingActivity"
+			android:label = "@string/title_setting_fragment">
+		</activity>
 	</application>
 </manifest>
