--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,6 +10,7 @@
 	<uses-feature android:name = "android.hardware.camera.autofocus"/>
 
 	<application
+		android:name = ".MyApplication"
 		android:allowBackup = "true"
 		android:icon = "@drawable/icon"
 		android:label = "@string/app_name"
@@ -18,14 +19,14 @@
 
 		<!-- 메인 액티비티 (지도, 기록, 그래프 화면을 볼 수 있음) -->
 		<activity android:name = ".MainActivity">
-			<intent-filter>
-				<action android:name = "android.intent.action.MAIN"/>
-				<category android:name = "android.intent.category.LAUNCHER"/>
-			</intent-filter>
 		</activity>
 
 		<!-- 웰컴 액티비티 (처음 앱 실행하면 나타남) -->
 		<activity android:name = ".WelcomeActivity">
+			<intent-filter>
+				<action android:name = "android.intent.action.MAIN"/>
+				<category android:name = "android.intent.category.LAUNCHER"/>
+			</intent-filter>
 		</activity>
 
 		<!-- 설정 액티비티 -->
